--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "solid-app-router": "^0.0.21",
-    "solid-js": "0.24.0",
+    "solid-js": "^0.24.7",
     "solid-ssr": "^0.24.0"
   },
   "devDependencies": {
