--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@rollup/plugin-node-resolve": "11.0.1",
     "@rollup/plugin-replace": "2.3.3",
     "@rollup/plugin-typescript": "^8.2.0",
+    "@rollup/plugin-url": "^6.0.0",
     "babel-preset-solid": "^0.24.0",
     "clean-css": "^5.1.0",
     "compression": "^1.7.4",
